fix shotchart width issue on iphone SE

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -803,3 +803,8 @@ label{
 .noUi-connect{
     background: #585757 !important;
 }
+@media only screen and (max-width: 320px){
+    #iframe-container{
+        margin-left:-8px;
+    }
+}
